<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_name_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_id_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_dob_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_bloodGroup_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_phone_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_state_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_district_hint" />

        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_address_hint" />

    </LinearLayout>

</ScrollView>